src/BlocklyGrammerParser.js
// Generated from BlocklyGrammer.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('./antlr4/index');
var BlocklyGrammerVisitor = require('./BlocklyGrammerVisitor').BlocklyGrammerVisitor;

var grammarFileName = "BlocklyGrammer.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'grammar'", "';'", "'statExprSplit : '=== statement ^ === expression v ===' ;'", 
                     "':'", "'|'", "'expression'", "'?'", "'+'", "'*'", 
                     "'MeaningfulSplit : '=== meaningful ^ ===' ;'", "'('", 
                     "')'", "'~'", "'.'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "Brackets", "LexerIdentifier", 
                      "ParserIdentifier", "String", "LabelForParserRule", 
                      "Newline", "WhiteSpace", "BlockComment", "FragmentComment", 
                      "LineComment", "ArrowComment" ];

var ruleNames =  [ "grammarFile", "grammerDecl", "statExprSplit", "statementRule", 
                   "expressionRule", "arithmeticRuleCollection", "parserRuleAtom", 
                   "lexerRuleCollection", "meaningfulSplit", "lexerRule", 
                   "strings", "lexerRuleExpr" ];

function BlocklyGrammerParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BlocklyGrammerParser.prototype = Object.create(antlr4.Parser.prototype);
BlocklyGrammerParser.prototype.constructor = BlocklyGrammerParser;

Object.defineProperty(BlocklyGrammerParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BlocklyGrammerParser.EOF = antlr4.Token.EOF;
BlocklyGrammerParser.T__0 = 1;
BlocklyGrammerParser.T__1 = 2;
BlocklyGrammerParser.T__2 = 3;
BlocklyGrammerParser.T__3 = 4;
BlocklyGrammerParser.T__4 = 5;
BlocklyGrammerParser.T__5 = 6;
BlocklyGrammerParser.T__6 = 7;
BlocklyGrammerParser.T__7 = 8;
BlocklyGrammerParser.T__8 = 9;
BlocklyGrammerParser.T__9 = 10;
BlocklyGrammerParser.T__10 = 11;
BlocklyGrammerParser.T__11 = 12;
BlocklyGrammerParser.T__12 = 13;
BlocklyGrammerParser.T__13 = 14;
BlocklyGrammerParser.Brackets = 15;
BlocklyGrammerParser.LexerIdentifier = 16;
BlocklyGrammerParser.ParserIdentifier = 17;
BlocklyGrammerParser.String = 18;
BlocklyGrammerParser.LabelForParserRule = 19;
BlocklyGrammerParser.Newline = 20;
BlocklyGrammerParser.WhiteSpace = 21;
BlocklyGrammerParser.BlockComment = 22;
BlocklyGrammerParser.FragmentComment = 23;
BlocklyGrammerParser.LineComment = 24;
BlocklyGrammerParser.ArrowComment = 25;

BlocklyGrammerParser.RULE_grammarFile = 0;
BlocklyGrammerParser.RULE_grammerDecl = 1;
BlocklyGrammerParser.RULE_statExprSplit = 2;
BlocklyGrammerParser.RULE_statementRule = 3;
BlocklyGrammerParser.RULE_expressionRule = 4;
BlocklyGrammerParser.RULE_arithmeticRuleCollection = 5;
BlocklyGrammerParser.RULE_parserRuleAtom = 6;
BlocklyGrammerParser.RULE_lexerRuleCollection = 7;
BlocklyGrammerParser.RULE_meaningfulSplit = 8;
BlocklyGrammerParser.RULE_lexerRule = 9;
BlocklyGrammerParser.RULE_strings = 10;
BlocklyGrammerParser.RULE_lexerRuleExpr = 11;

function GrammarFileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_grammarFile;
    return this;
}

GrammarFileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GrammarFileContext.prototype.constructor = GrammarFileContext;

GrammarFileContext.prototype.grammerDecl = function() {
    return this.getTypedRuleContext(GrammerDeclContext,0);
};

GrammarFileContext.prototype.statExprSplit = function() {
    return this.getTypedRuleContext(StatExprSplitContext,0);
};

GrammarFileContext.prototype.lexerRuleCollection = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LexerRuleCollectionContext);
    } else {
        return this.getTypedRuleContext(LexerRuleCollectionContext,i);
    }
};

GrammarFileContext.prototype.meaningfulSplit = function() {
    return this.getTypedRuleContext(MeaningfulSplitContext,0);
};

GrammarFileContext.prototype.statementRule = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementRuleContext);
    } else {
        return this.getTypedRuleContext(StatementRuleContext,i);
    }
};

GrammarFileContext.prototype.expressionRule = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionRuleContext);
    } else {
        return this.getTypedRuleContext(ExpressionRuleContext,i);
    }
};

GrammarFileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitGrammarFile(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BlocklyGrammerParser.GrammarFileContext = GrammarFileContext;

BlocklyGrammerParser.prototype.grammarFile = function() {

    var localctx = new GrammarFileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BlocklyGrammerParser.RULE_grammarFile);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 24;
        this.grammerDecl();
        this.state = 28;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 25;
                this.statementRule(); 
            }
            this.state = 30;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 31;
        this.statExprSplit();
        this.state = 35;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 32;
                this.expressionRule(); 
            }
            this.state = 37;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 38;
        this.lexerRuleCollection();
        this.state = 39;
        this.meaningfulSplit();
        this.state = 40;
        this.lexerRuleCollection();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GrammerDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_grammerDecl;
    return this;
}

GrammerDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GrammerDeclContext.prototype.constructor = GrammerDeclContext;

GrammerDeclContext.prototype.LexerIdentifier = function() {
    return this.getToken(BlocklyGrammerParser.LexerIdentifier, 0);
};

GrammerDeclContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitGrammerDecl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BlocklyGrammerParser.GrammerDeclContext = GrammerDeclContext;

BlocklyGrammerParser.prototype.grammerDecl = function() {

    var localctx = new GrammerDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BlocklyGrammerParser.RULE_grammerDecl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        this.match(BlocklyGrammerParser.T__0);
        this.state = 43;
        this.match(BlocklyGrammerParser.LexerIdentifier);
        this.state = 44;
        this.match(BlocklyGrammerParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatExprSplitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_statExprSplit;
    return this;
}

StatExprSplitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatExprSplitContext.prototype.constructor = StatExprSplitContext;


StatExprSplitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitStatExprSplit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BlocklyGrammerParser.StatExprSplitContext = StatExprSplitContext;

BlocklyGrammerParser.prototype.statExprSplit = function() {

    var localctx = new StatExprSplitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BlocklyGrammerParser.RULE_statExprSplit);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(BlocklyGrammerParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementRuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_statementRule;
    return this;
}

StatementRuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementRuleContext.prototype.constructor = StatementRuleContext;


 
StatementRuleContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function StatValueContext(parser, ctx) {
	StatementRuleContext.call(this, parser);
    StatementRuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatValueContext.prototype = Object.create(StatementRuleContext.prototype);
StatValueContext.prototype.constructor = StatValueContext;

BlocklyGrammerParser.StatValueContext = StatValueContext;

StatValueContext.prototype.ParserIdentifier = function() {
    return this.getToken(BlocklyGrammerParser.ParserIdentifier, 0);
};

StatValueContext.prototype.parserRuleAtom = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParserRuleAtomContext);
    } else {
        return this.getTypedRuleContext(ParserRuleAtomContext,i);
    }
};
StatValueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitStatValue(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatListContext(parser, ctx) {
	StatementRuleContext.call(this, parser);
    StatementRuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatListContext.prototype = Object.create(StatementRuleContext.prototype);
StatListContext.prototype.constructor = StatListContext;

BlocklyGrammerParser.StatListContext = StatListContext;

StatListContext.prototype.ParserIdentifier = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BlocklyGrammerParser.ParserIdentifier);
    } else {
        return this.getToken(BlocklyGrammerParser.ParserIdentifier, i);
    }
};

StatListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitStatList(this);
    } else {
        return visitor.visitChildren(this);
    }
};



BlocklyGrammerParser.StatementRuleContext = StatementRuleContext;

BlocklyGrammerParser.prototype.statementRule = function() {

    var localctx = new StatementRuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BlocklyGrammerParser.RULE_statementRule);
    var _la = 0; // Token type
    try {
        this.state = 67;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            localctx = new StatListContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 48;
            this.match(BlocklyGrammerParser.ParserIdentifier);
            this.state = 49;
            this.match(BlocklyGrammerParser.T__3);
            this.state = 50;
            this.match(BlocklyGrammerParser.ParserIdentifier);
            this.state = 53; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 51;
                this.match(BlocklyGrammerParser.T__4);
                this.state = 52;
                this.match(BlocklyGrammerParser.ParserIdentifier);
                this.state = 55; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===BlocklyGrammerParser.T__4);
            this.state = 57;
            this.match(BlocklyGrammerParser.T__1);
            break;

        case 2:
            localctx = new StatValueContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 58;
            this.match(BlocklyGrammerParser.ParserIdentifier);
            this.state = 59;
            this.match(BlocklyGrammerParser.T__3);
            this.state = 63;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BlocklyGrammerParser.T__5) | (1 << BlocklyGrammerParser.LexerIdentifier) | (1 << BlocklyGrammerParser.ParserIdentifier) | (1 << BlocklyGrammerParser.String))) !== 0)) {
                this.state = 60;
                this.parserRuleAtom();
                this.state = 65;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 66;
            this.match(BlocklyGrammerParser.T__1);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionRuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_expressionRule;
    return this;
}

ExpressionRuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionRuleContext.prototype.constructor = ExpressionRuleContext;


 
ExpressionRuleContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ExprExpressionContext(parser, ctx) {
	ExpressionRuleContext.call(this, parser);
    ExpressionRuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExprExpressionContext.prototype = Object.create(ExpressionRuleContext.prototype);
ExprExpressionContext.prototype.constructor = ExprExpressionContext;

BlocklyGrammerParser.ExprExpressionContext = ExprExpressionContext;

ExprExpressionContext.prototype.arithmeticRuleCollection = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArithmeticRuleCollectionContext);
    } else {
        return this.getTypedRuleContext(ArithmeticRuleCollectionContext,i);
    }
};

ExprExpressionContext.prototype.ParserIdentifier = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BlocklyGrammerParser.ParserIdentifier);
    } else {
        return this.getToken(BlocklyGrammerParser.ParserIdentifier, i);
    }
};

ExprExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitExprExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExprValueContext(parser, ctx) {
	ExpressionRuleContext.call(this, parser);
    ExpressionRuleContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExprValueContext.prototype = Object.create(ExpressionRuleContext.prototype);
ExprValueContext.prototype.constructor = ExprValueContext;

BlocklyGrammerParser.ExprValueContext = ExprValueContext;

ExprValueContext.prototype.ParserIdentifier = function() {
    return this.getToken(BlocklyGrammerParser.ParserIdentifier, 0);
};

ExprValueContext.prototype.parserRuleAtom = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParserRuleAtomContext);
    } else {
        return this.getTypedRuleContext(ParserRuleAtomContext,i);
    }
};
ExprValueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitExprValue(this);
    } else {
        return visitor.visitChildren(this);
    }
};



BlocklyGrammerParser.ExpressionRuleContext = ExpressionRuleContext;

BlocklyGrammerParser.prototype.expressionRule = function() {

    var localctx = new ExpressionRuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BlocklyGrammerParser.RULE_expressionRule);
    var _la = 0; // Token type
    try {
        this.state = 95;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BlocklyGrammerParser.T__5:
            localctx = new ExprExpressionContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 69;
            this.match(BlocklyGrammerParser.T__5);
            this.state = 70;
            this.match(BlocklyGrammerParser.T__3);
            this.state = 73;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case BlocklyGrammerParser.T__5:
                this.state = 71;
                this.arithmeticRuleCollection();
                break;
            case BlocklyGrammerParser.ParserIdentifier:
                this.state = 72;
                this.match(BlocklyGrammerParser.ParserIdentifier);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 82;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===BlocklyGrammerParser.T__4) {
                this.state = 75;
                this.match(BlocklyGrammerParser.T__4);
                this.state = 78;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case BlocklyGrammerParser.T__5:
                    this.state = 76;
                    this.arithmeticRuleCollection();
                    break;
                case BlocklyGrammerParser.ParserIdentifier:
                    this.state = 77;
                    this.match(BlocklyGrammerParser.ParserIdentifier);
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 84;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 85;
            this.match(BlocklyGrammerParser.T__1);
            break;
        case BlocklyGrammerParser.ParserIdentifier:
            localctx = new ExprValueContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 86;
            this.match(BlocklyGrammerParser.ParserIdentifier);
            this.state = 87;
            this.match(BlocklyGrammerParser.T__3);
            this.state = 91;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BlocklyGrammerParser.T__5) | (1 << BlocklyGrammerParser.LexerIdentifier) | (1 << BlocklyGrammerParser.ParserIdentifier) | (1 << BlocklyGrammerParser.String))) !== 0)) {
                this.state = 88;
                this.parserRuleAtom();
                this.state = 93;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 94;
            this.match(BlocklyGrammerParser.T__1);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ArithmeticRuleCollectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_arithmeticRuleCollection;
    return this;
}

ArithmeticRuleCollectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArithmeticRuleCollectionContext.prototype.constructor = ArithmeticRuleCollectionContext;

ArithmeticRuleCollectionContext.prototype.parserRuleAtom = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParserRuleAtomContext);
    } else {
        return this.getTypedRuleContext(ParserRuleAtomContext,i);
    }
};

ArithmeticRuleCollectionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitArithmeticRuleCollection(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BlocklyGrammerParser.ArithmeticRuleCollectionContext = ArithmeticRuleCollectionContext;

BlocklyGrammerParser.prototype.arithmeticRuleCollection = function() {

    var localctx = new ArithmeticRuleCollectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, BlocklyGrammerParser.RULE_arithmeticRuleCollection);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(BlocklyGrammerParser.T__5);
        this.state = 101;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BlocklyGrammerParser.T__5) | (1 << BlocklyGrammerParser.LexerIdentifier) | (1 << BlocklyGrammerParser.ParserIdentifier) | (1 << BlocklyGrammerParser.String))) !== 0)) {
            this.state = 98;
            this.parserRuleAtom();
            this.state = 103;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ParserRuleAtomContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BlocklyGrammerParser.RULE_parserRuleAtom;
    return this;
}

ParserRuleAtomContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParserRuleAtomContext.prototype.constructor = ParserRuleAtomContext;


 
ParserRuleAtomContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ParserAtomExprContext(parser, ctx) {
	ParserRuleAtomContext.call(this, parser);
    ParserRuleAtomContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParserAtomExprContext.prototype = Object.create(ParserRuleAtomContext.prototype);
ParserAtomExprContext.prototype.constructor = ParserAtomExprContext;

BlocklyGrammerParser.ParserAtomExprContext = ParserAtomExprContext;

ParserAtomExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitParserAtomExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ParserAtomParserIdContext(parser, ctx) {
	ParserRuleAtomContext.call(this, parser);
    ParserRuleAtomContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParserAtomParserIdContext.prototype = Object.create(ParserRuleAtomContext.prototype);
ParserAtomParserIdContext.prototype.constructor = ParserAtomParserIdContext;

BlocklyGrammerParser.ParserAtomParserIdContext = ParserAtomParserIdContext;

ParserAtomParserIdContext.prototype.ParserIdentifier = function() {
    return this.getToken(BlocklyGrammerParser.ParserIdentifier, 0);
};
ParserAtomParserIdContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitParserAtomParserId(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ParserAtomStrContext(parser, ctx) {
	ParserRuleAtomContext.call(this, parser);
    ParserRuleAtomContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParserAtomStrContext.prototype = Object.create(ParserRuleAtomContext.prototype);
ParserAtomStrContext.prototype.constructor = ParserAtomStrContext;

BlocklyGrammerParser.ParserAtomStrContext = ParserAtomStrContext;

ParserAtomStrContext.prototype.String = function() {
    return this.getToken(BlocklyGrammerParser.String, 0);
};
ParserAtomStrContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitParserAtomStr(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ParserAtomLexerIdContext(parser, ctx) {
	ParserRuleAtomContext.call(this, parser);
    ParserRuleAtomContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParserAtomLexerIdContext.prototype = Object.create(ParserRuleAtomContext.prototype);
ParserAtomLexerIdContext.prototype.constructor = ParserAtomLexerIdContext;

BlocklyGrammerParser.ParserAtomLexerIdContext = ParserAtomLexerIdContext;

ParserAtomLexerIdContext.prototype.LexerIdentifier = function() {
    return this.getToken(BlocklyGrammerParser.LexerIdentifier, 0);
};
ParserAtomLexerIdContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BlocklyGrammerVisitor ) {
        return visitor.visitParserAtomLexerId(this);
    } else {
        return visitor.visitChildren(this);
    }
};



BlocklyGrammerParser.ParserRuleAtomContext = ParserRuleAtomContext;

BlocklyGrammerParser.prototype.parserRuleAtom = function() {

    var localctx = new ParserRuleAtomContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, BlocklyGrammerParser.RULE_parserRuleAtom);
    var _la = 0; // Token type
    try {
        this.state = 132;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BlocklyGrammerParser.T__5:
            localctx = new ParserAtomExprContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 104;
            this.match(BlocklyGrammerParser.T__5);
            this.state = 109;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===BlocklyGrammerParser.T__6) {
                this.state = 105;
                this.match(BlocklyGrammerParser.T__6);
                this.state = 107;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===BlocklyGrammerParser.T__6) {
                    this.state = 106;
                    this.match(BlocklyGrammerParser.T__6);
                }

            }

            break;
        case BlocklyGrammerParser.ParserIdentifier:
            localctx = new ParserAtomParserIdContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 111;
            this.match(BlocklyGrammerParser.ParserIdentifier);
            this.state = 116;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BlocklyGrammerParser.T__6) | (1 << BlocklyGrammerParser.T__7) | (1 << BlocklyGrammerParser.T__8))) !== 0)) {
                this.state = 112;
                _la = this._input.LA(1);
                if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << BlocklyGrammerParser.T__6) | (1 << BlocklyGrammerParser.T__7) | (1 << BlocklyGrammerParser.T__8))) !== 0))) {
                this._errHandler.recoverInline(this);
                }
                else {
                	this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 114;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===BlocklyGrammerParser.T__6) {
                    this.state = 113;
                    this.match(BlocklyGrammerParser.T__6);
                }

            }
